# paste-and-elaste

./: CMakeLists.txt  README.md
src/: ClipboardAdapter.cpp  ClipboardAdapter.h  ClipboardEntry.h  ClipboardEntryModel.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  UiMainWindow.h  consts.h  main.cpp  resources.rc
src/model/: ClipboardEntry.cpp  ClipboardEntry.h  ClipboardEntryModel.cpp  ClipboardEntryModel.h
src/ui/main-window/: MainWindow.h  MainWindow.ui  UiMainWindow.h  ui_MainWindow.h
tools/: deploy.bat
